apps/40-network/adguard-home/base/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguard-home
  labels:
    app: adguard-home
spec:
  serviceName: adguard-home-headless
  replicas: 2
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
      annotations:
        reloader.stakater.com/auto: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/metrics"
    spec:
      priorityClassName: vixens-high
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: adguard-home
          image: adguard/adguardhome:v0.107.56
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - containerPort: 3000
              name: http
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /opt/adguardhome/conf
            - name: data
              mountPath: /opt/adguardhome/work
        - name: litestream
          image: litestream/litestream:0.5.6
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          args:
            - replicate
            - -config
            - /etc/litestream.yml
          ports:
            - containerPort: 9090
              name: metrics
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: config
              mountPath: /opt/adguardhome/conf
            - name: adguard-home-litestream-config
              mountPath: /etc/litestream.yml
              subPath: litestream.yml
        - name: config-syncer
          image: alpine:3.23
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          command:
            - sh
            - -c
          args:
            - |
              [...]
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: config
              mountPath: /opt/adguardhome/conf
      volumes:
        - name: adguard-home-litestream-config
          configMap:
            name: adguard-home-litestream-config
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: synelia-iscsi-retain
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: synelia-iscsi-retain
        resources:
          requests:
            storage: 5Gi
