apps/40-network/adguard-home/base/service-dns-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns-lb
  labels:
    app: adguard-home
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.208.70
  selector:
    app: adguard-home
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
