apps/40-network/adguard-home/base/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns
  labels:
    app: adguard-home
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local # Important pour voir la vraie IP source des clients DNS
  selector:
    app: adguard-home
  ports:
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
