apps/40-network/adguard-home/base/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-web
  labels:
    app: adguard-home
spec:
  type: ClusterIP
  selector:
    app: adguard-home
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: http-setup
      port: 3000
      targetPort: 3000
      protocol: TCP
