apps/40-network/adguard-home/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
  labels:
    app: adguard-home
spec:
  type: ClusterIP
  selector:
    app: adguard-home
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: http-setup
      port: 3000
      targetPort: 3000
      protocol: TCP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
