apps/40-network/adguard-home/base/ingressroute-dns.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: adguard-home-dns-tcp
  namespace: networking
spec:
  entryPoints:
    - dns-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: adguard-home
          port: 53
